--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "blocked": "^1.2.1",
     "config": "^3.1.0",
     "log4js": "^4.1.0",
+    "longjohn": "^0.2.12",
     "redis": "^2.8.0",
     "zongji": "^0.4.7"
   }
